--- a/src/assets/styles/card.scss
+++ b/src/assets/styles/card.scss
@@ -6,6 +6,8 @@
 
 	margin: .5rem;
 
+	box-shadow: 0 .125rem .25rem rgba(0, 0, 0, .175)!important;
+
 	.card-body {
 		justify-content: center;
 		.card-header {
