--- a/src/assets/styles/form.scss
+++ b/src/assets/styles/form.scss
@@ -49,11 +49,13 @@
 .form-control {
 	background-color: rgb(233, 237, 240);
 	border-color: rgb(233, 237, 240);
+	// margin-left: 2.5px;
 }
 
 .form-control:focus, .btn-primary:focus {
-	box-shadow: unset !important;
-	border-color: #ced4da !important;
+	border-color: var(--secondary);
+	box-shadow: 0 0 0 0.2rem rgba(104, 190, 130, 0.3);
+	// box-shadow: unset !important;
 }
 
 .form-check, .custom-switch {
@@ -80,10 +82,36 @@
 	width: 100%;
 
 	position: sticky;
-	bottom: 0;
+	bottom: -4px;
 	background-color: var(--white) !important;
 
 	.col {
 		padding: 0;
+	}
+}
+
+.input-search-container {
+	position: absolute;
+	margin-top: 3px;
+	background-color: #e9edf0;
+	color: #495057;
+	border-radius: .25rem;
+	// padding: .375rem .75rem;
+	width: 100%;
+	max-height: 10rem;
+	overflow: auto;
+}
+
+select, option {
+	cursor: pointer;
+}
+
+.form {
+	.row:nth-last-of-type(2) {
+		margin-bottom: 0;
+
+		.form-group {
+			margin-bottom: 0;
+		}
 	}
 }
