--- a/src/assets/styles/loading.scss
+++ b/src/assets/styles/loading.scss
@@ -11,7 +11,7 @@
 	-webkit-animation-timing-function: linear;
 	// background: #ffffff !important;
     background-color: #ffffff !important;
-	border-color: #ffffff !important;
+	border-color: #bababa !important;
 	border-radius: .25rem;
 	background-image: linear-gradient(to right, #ffffff 0%, #bababa 20%, #ffffff 40%, #ffffff 100%);
 	background-repeat: no-repeat;
@@ -41,7 +41,10 @@
 			transition: unset !important;
 			@include loadingAnimation;
 			pointer-events: none;
-			border: 0;
+			border: 1px;
+			border-style: solid;
+			border-color: #bababa !important;
+			outline: none;
 
 			label {
 				transition: unset !important;
